changes to queen creek

--- a/app/globals.css
+++ b/app/globals.css
@@ -47,11 +47,11 @@
 
   /* Queen Creek Chamber Brand Colors */
   /* Primary: Pantone 7683 C - R8, G115, B181 / Web Safe #0066cc */
-  --qc-primary: #0073B5;
+  --qc-primary: #0873b5;
   /* Secondary: Pantone 143C - R247, G171, B59 / Web Safe #ff9933 */
-  --qc-secondary: #F7AB3B;
+  --qc-secondary: #f7ab3b;
   /* Text: Pantone 533 C - R31, G42, B68 / Web Safe #333333 */
-  --qc-text: #1F2A44;
+  --qc-text: #1f2a44;
 
   /* Background & Text */
   --background: #FFFFFF;
